--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Nav -->
   <header class="nav">
     <div class="wrap container">
-      <a class="brand" href="#"><span class="dot"></span> <span>ROMA RP</span></a>
+      <a class="brand" href="#"><span class="dot"></span> <span><img src="download.png" alt=""></span></a>
       <nav class="links" aria-label="Primaria">
         <a href="#home" aria-current="page">Home</a>
         <a href="#chi-siamo">Chi Siamo</a>
@@ -23,6 +23,7 @@
       </nav>
     </div>
   </header>
+
 
   <!-- Hero -->
   <section id="home" class="hero">
